@@ -99,7 +99,7 @@ public class GravityAndOrbitsModeList extends ArrayList<GravityAndOrbitsMode> {
     public static final double SUN_MODES_VELOCITY_SCALE = 200 / 4.466E-5;
     private final Line2D.Double initialMeasuringTapeLocationSunModes = new Line2D.Double( 0, -EARTH_PERIHELION / 6, EARTH_PERIHELION, -EARTH_PERIHELION / 6 );
 
-    public GravityAndOrbitsModeList( Property<Boolean> clockPausedProperty, Property<Boolean> gravityEnabledProperty, Property<Scale> scaleProperty, Property<Boolean> stepping, Property<Boolean> rewinding ) {
+    public GravityAndOrbitsModeList( Property<Boolean> clockPausedProperty, Property<Boolean> gravityEnabledProperty, Property<Scale> scaleProperty, Property<Boolean> stepping, Property<Boolean> rewinding, Property<Double> timeSpeedScaleProperty ) {
         this.scaleProperty = scaleProperty;
         this.clockPausedProperty = clockPausedProperty;
         this.stepping = stepping;
@@ -115,7 +115,7 @@ public class GravityAndOrbitsModeList extends ArrayList<GravityAndOrbitsMode> {
         add( new GravityAndOrbitsMode( GAOStrings.SUN_AND_PLANET, VectorNode.FORCE_SCALE * 100 * 1.2, false, GravityAndOrbitsClock.DEFAULT_DT, days,
                                        createIconImage( true, true, false, false ), SEC_PER_YEAR, clockPausedProperty, SUN_MODES_VELOCITY_SCALE, readoutInEarthMasses,
                                        initialMeasuringTapeLocationSunModes, 1.25, new ImmutableVector2D( 0, 0 ),
-                                       gravityEnabledProperty, EARTH_PERIHELION / 2, new Point2D.Double( 0, 0 ), stepping, rewinding ) {
+                                       gravityEnabledProperty, EARTH_PERIHELION / 2, new Point2D.Double( 0, 0 ), stepping, rewinding, timeSpeedScaleProperty ) {
             {
                 final Body sun = createSun( getMaxPathLength() );
                 addBody( sun );
@@ -125,7 +125,7 @@ public class GravityAndOrbitsModeList extends ArrayList<GravityAndOrbitsMode> {
         add( new GravityAndOrbitsMode( GAOStrings.SUN_PLANET_AND_MOON, VectorNode.FORCE_SCALE * 100 * 1.2, false, GravityAndOrbitsClock.DEFAULT_DT, days,
                                        createIconImage( true, true, true, false ), SEC_PER_YEAR, clockPausedProperty, SUN_MODES_VELOCITY_SCALE, readoutInEarthMasses,
                                        initialMeasuringTapeLocationSunModes, 1.25, new ImmutableVector2D( 0, 0 ),
-                                       gravityEnabledProperty, EARTH_PERIHELION / 2, new Point2D.Double( 0, 0 ), stepping, rewinding ) {
+                                       gravityEnabledProperty, EARTH_PERIHELION / 2, new Point2D.Double( 0, 0 ), stepping, rewinding, timeSpeedScaleProperty ) {
             {
                 final Body sun = createSun( getMaxPathLength() );
                 addBody( sun );
@@ -144,7 +144,7 @@ public class GravityAndOrbitsModeList extends ArrayList<GravityAndOrbitsMode> {
                                        createIconImage( false, true, true, false ), SEC_PER_MOON_ORBIT, clockPausedProperty, SUN_MODES_VELOCITY_SCALE / 100 * 6, readoutInEarthMasses,
                                        new Line2D.Double( EARTH_PERIHELION, -MOON_PERIGEE / 4, EARTH_PERIHELION + MOON_PERIGEE, -MOON_PERIGEE / 4 ), 400,
                                        new ImmutableVector2D( EARTH_PERIHELION, 0 ),
-                                       gravityEnabledProperty, MOON_PERIGEE / 2, new Point2D.Double( EARTH_PERIHELION, 0 ), stepping, rewinding ) {
+                                       gravityEnabledProperty, MOON_PERIGEE / 2, new Point2D.Double( EARTH_PERIHELION, 0 ), stepping, rewinding, timeSpeedScaleProperty ) {
             // Add in some initial -x velocity to offset the earth-moon barycenter drift
             //This value was computed by sampling the total momentum in GravityAndOrbitsModel for this mode
             ImmutableVector2D sampledSystemMomentum = new ImmutableVector2D( 7.421397422188586E25, -1.080211713202125E22 );
@@ -171,7 +171,7 @@ public class GravityAndOrbitsModeList extends ArrayList<GravityAndOrbitsMode> {
                                        SUN_MODES_VELOCITY_SCALE / 10000, spaceStationMassReadoutFactory,
                                        new Line2D.Double( EARTH_PERIHELION, -EARTH_RADIUS / 6, EARTH_PERIHELION + SPACE_STATION_PERIGEE + EARTH_RADIUS, -EARTH_RADIUS / 6 ),
                                        400 * 54, new ImmutableVector2D( EARTH_PERIHELION, 0 ),
-                                       gravityEnabledProperty, SPACE_STATION_PERIGEE * 15, new Point2D.Double( EARTH_PERIHELION, 0 ), stepping, rewinding ) {
+                                       gravityEnabledProperty, SPACE_STATION_PERIGEE * 15, new Point2D.Double( EARTH_PERIHELION, 0 ), stepping, rewinding, timeSpeedScaleProperty ) {
             final Body earth = createPlanet( null, 0, 0, getMaxPathLength(), planetCartoonDiameterScale * 1.5 * 1.5 / 54 );
 
             {
